--- a/Site1/templates/master.html
+++ b/Site1/templates/master.html
@@ -7,14 +7,13 @@
     <title>{% block title %}Crypto Professional{% endblock %}</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
-        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             color: #333;
         }
-
+        
         .container {
             width: 80%;
             margin: 0 auto;
@@ -115,33 +114,38 @@
             }
         }
         /* Footer Styles */
+        
         footer {
             background: #222;
             color: #fff;
             padding: 40px 0;
         }
-
-        footer .quick-links, footer .contact-info, footer .social-media, footer .newsletter {
+        
+        footer .quick-links,
+        footer .contact-info,
+        footer .social-media,
+        footer .newsletter {
             margin-bottom: 20px;
         }
-
-        footer .quick-links a, footer .social-media a {
+        
+        footer .quick-links a,
+        footer .social-media a {
             display: block;
             color: #fff;
             text-decoration: none;
             margin-bottom: 5px;
         }
-
+        
         footer .newsletter form {
             display: flex;
         }
-
+        
         footer .newsletter input {
             padding: 10px;
             border: none;
             border-radius: 5px 0 0 5px;
         }
-
+        
         footer .newsletter button {
             padding: 10px;
             border: none;
@@ -150,7 +154,7 @@
             border-radius: 0 5px 5px 0;
             cursor: pointer;
         }
-
+        
         footer .disclaimer {
             font-size: 14px;
             text-align: center;
@@ -168,21 +172,24 @@
             <a href="/home/">Home</a>
             <a href="/encrypt/">Encrypt</a>
             <a href="/decrypt/">Decrypt</a>
-
+            <a href="/create_stuff/">Create</a>
+            <a href="/stuff_list/">Stuff</a>
         </div>
     </div>
-    
+
     <div class="hero">
         <h1>Welcome to Crypto Cipher <br> Server of Group 9</h1>
         <a href="/encrypt/">Encrypt</a>
         <a href="/decrypt/">Decrypt</a>
+        <a href="{% url 'create_stuff' %}">Create Stuff</a>
+        <a href="{% url 'stuff_list' %}">Stuff List</a>
     </div>
-    
+
     <div class="content">
         <h2>About Us</h2>
         <p>CryptoCipher is a secure website developed by Nguyen Quoc Phu. This website allows users to encrypt and decrypt files using AES symmetric encryption to ensure the security of user information.</p>
     </div>
-    
+
     <footer>
         <div class="container">
             <div class="quick-links">
@@ -191,8 +198,8 @@
                 <a href="#">Help Center</a>
             </div>
             <div class="contact-info">
-                <p>Email: support@cryptocipher.com</p>
-                <p>Phone: +123 456 7890</p>
+                <p>Email: guofu2004@gmail.com</p>
+                <p>Phone: +84 966 572 874/p>
             </div>
             <div class="social-media">
                 <a href="https://www.facebook.com/Phu22122004/">Facebook</a>
